Se ha añadido una sección para el contenido principal y un pie de página

--- a/primeraweb.html
+++ b/primeraweb.html
@@ -27,5 +27,9 @@
         <blockquote>Segundo Elemento</blockquote> <!--Citas cortas --> 
         <blockquote>Tercer Elemento</blockquote> 
     </aside>
+    <section> <!-- Contenido principal -->
+        <p>Párrafo de ejemplo</p>
+    </section>
+    <footer> Derechos Reservados Tfno: 123456789</footer>
 </body>
 </html>
