Se ha incluido títulos y subtítulos en cada article o noticia jerarquizados correctamente. Además se ha añadido a cada noticia un footer

--- a/primeraweb.html
+++ b/primeraweb.html
@@ -28,8 +28,54 @@
         <blockquote>Tercer Elemento</blockquote> 
     </aside>
     <section> <!-- Contenido principal -->
-        <p>Párrafo de ejemplo</p>
+
+        <article> <!-- Agrupar contenido similar -->
+            
+            <header> <!-- Cabecera de la sección article -->
+                <hgroup>
+                    <h2>Título de la noticia 1</h2>
+                    <h3>Subtítulo de la noticia 1</h3>
+                </hgroup>
+            </header>           
+
+            <p> Noticia 1</p>
+            <p> Seguimos hablando de la noticia 1</p>
+            <p> Terminamos de hablar de la noticia 1</p>
+
+            <footer> <!-- Pie de página de la sección article-->
+                <p>Comentarios de usuarios</p>
+            </footer>
+        </article>
+        <article>
+            <header> <!-- Cabecera de la sección article -->
+                <hgroup>
+                    <h2>Título de la noticia 2</h2>
+                    <h3>Subtítulo de la noticia 2</h3>
+                </hgroup>
+            </header>           
+            <p> Noticia 2</p>
+            <p> Seguimos hablando de la noticia 2</p>
+            <p> Terminamos de hablar de la noticia 2</p>
+            <footer> <!-- Pie de página de la sección article-->
+                <p>Comentarios de usuarios</p>
+            </footer>
+        </article>
+        <article>
+            <header> <!-- Cabecera de la sección article -->
+                <hgorup>
+                    <h2>Título de la noticia 3</h2>
+                    <h3>Subtítulo de la noticia 3</h3>
+                </hgorup>
+            </header>           
+            <p> Noticia 3</p>
+            <p> Seguimos hablando de la noticia 3</p>
+            <p> Terminamos de hablar de la noticia 3</p>
+            <footer> <!-- Pie de página de la sección article-->
+                <p>Comentarios de usuarios</p>
+            </footer>
+        </article>
     </section>
+
     <footer> Derechos Reservados Tfno: 123456789</footer>
 </body>
 </html>
