Incluida hoja de estilos CSS que modifica el color de fondo de las etiquetas principales de la página web

--- a/primeraweb.html
+++ b/primeraweb.html
@@ -6,15 +6,15 @@
     <meta name="description" content="Página de aprendizaje html 5"/> <!-- Descripción muy importante de la página web que la categoriza, content = atributos -->
     <meta name="keywords" content="html5, css3, Javascript, diseño web"/> <!-- Palabras clave -->
     <title> Página de programación en HTML5 </title>  <!-- Cambia el texto de la pestaña y tiene importancia en la categorización de los navegadores -->
-    <link rel="stylesheet" href=""mihojadeestilos.css"/> <!-- Enlazar o incluir documentos adicionales en la web -->
+    <link rel="stylesheet" href="mihojadeestilos.css" /> <!-- Enlazar o incluir documentos adicionales en la web -->
 </head>
 <body>
     <!-- Cuerpo de la página web, todo lo que se introduce aquí se ve-->
-    <header> <!-- Cabecera -->
+    <header id="cabeceraweb"> <!-- Cabecera -->
         <h1>Este sería el título de nuestra web</h1> <!-- h1..h6-->
         
     </header>
-    <nav> <!-- Barra de navegación -->
+    <nav id="navegacionprincipal"> <!-- Barra de navegación -->
         <ul> <!-- Lista de elementos desordenados. ol para ordenados-->
             <li>Quiénes somos</li>
             <li>Nuestros Productos</li>
@@ -22,12 +22,12 @@
             <li>Precios</li>
         </ul>
     </nav>
-    <aside> <!-- Barra lateral -->
+    <aside id="barralateral"> <!-- Barra lateral -->
         <blockquote>Primer Elemento</blockquote> 
         <blockquote>Segundo Elemento</blockquote> <!--Citas cortas --> 
         <blockquote>Tercer Elemento</blockquote> 
     </aside>
-    <section> <!-- Contenido principal -->
+    <section id="contenidoprincipal"> <!-- Contenido principal -->
 
         <article> <!-- Agrupar contenido similar -->
             
@@ -82,6 +82,6 @@
         </article>
     </section>
 
-    <footer> <small>Derechos Reservados</small> <address>Teléfono 123456789</address></footer> <!-- small para textos legales. address para datos personales-->
+    <footer id="pieprincipal"> <small>Derechos Reservados</small> <address>Teléfono 123456789</address></footer> <!-- small para textos legales. address para datos personales-->
 </body>
 </html>
