Agregada hoja de estilos para index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="es">
   <head>
    <title>AppDeGatos</title>
+   <link href="style.css" rel="stylesheet">
+   </style>
   </head>
   <body>
-    <h2>AppDeGatos</h2>
+    <h2 style="color: blue">AppDeGatos</h2>
     <main> <!-- Contenido principal de body -->
       <h3> Imágenes de Gatos:</h3>
       <!-- TODO: Agregar enlace a imágenes de datos -->
